--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -23,3 +23,23 @@ jobs:
           docker buildx create --use
           docker buildx build -t arshsohal02/file-upload:latest . --push
 
+  run-container:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Run Docker container
+        run: |
+          docker buildx create --use
+          docker run -d -p 3000:3000 arshsohal02/file-upload:latest
+        
+      
+
