--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -2,44 +2,42 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  
+      - main  # Trigger this workflow on pushes to the main branch
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest version of Ubuntu as the runner
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Checkout the code from your repository
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v1  # Set up Docker Buildx for multi-platform builds
 
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}  # Log in to Docker Hub using your secrets
 
       - name: Build and push Docker image
         run: |
-          docker buildx create --use
-          docker buildx build -t arshsohal02/file-upload:latest . --push
+          docker buildx create --use  # Create and use a new Buildx builder instance
+          docker buildx build -t arshsohal02/file-upload:latest . --push  # Build and push the Docker image to Docker Hub
 
   run-container:
-    runs-on: ubuntu-latest
-    needs: build-and-push
+    runs-on: ubuntu-latest  # Use the latest version of Ubuntu as the runner
+    needs: build-and-push  # Wait for the 'build-and-push' job to complete before starting this job
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Checkout the code from your repository
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v1  # Set up Docker Buildx for multi-platform builds
 
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}  # Log in to Docker Hub using your secrets
 
       - name: Run Docker container
         run: |
-          docker buildx create --use
-          docker run -d -p 3000:3000 arshsohal02/file-upload:latest
-        
-      
-
+          docker buildx create --use  # Create and use a new Buildx builder instance
+          docker run -d -p 3000:3000 arshsohal02/file-upload:latest  # Run the Docker container with port mapping
